fix: alert messages too wide in dialogs

--- a/src/pages/PlaceSetting/KegDetail.module.css
+++ b/src/pages/PlaceSetting/KegDetail.module.css
@@ -12,7 +12,3 @@
 .dialogCloseKeg p:first-of-type {
   font-size: 90%;
 }
-.dialogCloseKeg p:last-of-type {
-  margin-inline: var(--dialog-padding-inline);
-  padding-inline: 2rem;
-}
